incorperated failed drives for xtremIO and VMAX cleaned up formatting for csvs adjusted save location to be configurable updated config example

--- a/src/config/config.example
+++ b/src/config/config.example
@@ -1,4 +1,7 @@
 [noco]
-api_key = 
-xc-auth = 
-url = 
+api_key = NoCo API Token
+urlbulk = NoCo bulk endpoint
+url =     Noco base url
+
+[datapath]
+netpath = Network path (ie \\HOST\target\path)
