fixed issue where TaskScheduler would not see path

--- a/src/config/config.example
+++ b/src/config/config.example
@@ -5,3 +5,5 @@ url =     Noco base url
 
 [datapath]
 netpath = Network path (ie \\HOST\target\path)
+shareuser = network user
+sharepass = network password
